cabal-version:      3.0
name:               basics
synopsis:           gRPC basics tutorial for grapesy
version:            0.1.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Edsko de Vries
maintainer:         edsko@well-typed.com
build-type:         Custom
extra-source-files: proto/route_guide.proto
data-dir:           data
data-files:         route_guide_db.json
tested-with:        GHC==8.10.7
                  , GHC==9.2.8
                  , GHC==9.4.8
                  , GHC==9.6.4
                  , GHC==9.8.2

custom-setup
  setup-depends:
      base             >= 4.14 && < 5
    , Cabal            >= 3.0  && < 4
    , proto-lens-setup >= 0.4  && < 0.5

common lang
  build-depends:    base >= 4.14 && < 5
  default-language: Haskell2010
  ghc-options:      -Wall

  if impl(ghc >= 9.0)
    ghc-options:
      -Wunused-packages

  default-extensions:
      BangPatterns
      DataKinds
      FlexibleInstances
      ImportQualifiedPost
      LambdaCase
      NumericUnderscores
      OverloadedLabels
      OverloadedStrings
      ScopedTypeVariables
      TypeApplications
      TypeFamilies

library
  import:             lang
  hs-source-dirs:     src
  build-tool-depends: proto-lens-protoc:proto-lens-protoc

  build-depends:
    , aeson              >= 1.5 && < 2.3
    , containers         >= 0.6 && < 0.8
    , grapesy            >= 0.1 && < 0.2
    , proto-lens-runtime >= 0.7 && < 0.8
    , time               >= 1.9 && < 1.13
  exposed-modules:
      RouteGuide
      Proto.API.RouteGuide
  other-modules:
      Proto.RouteGuide
      Paths_basics
  autogen-modules:
      Proto.RouteGuide
      Paths_basics

executable route_guide_server
  import:          lang
  main-is:         Server.hs
  hs-source-dirs:  app
  ghc-options:     -main-is Server

  build-depends:
      -- internal
    , basics
  build-depends:
      -- inherited
    , grapesy
    , time

executable route_guide_client
  import:         lang
  main-is:        Client.hs
  hs-source-dirs: app
  ghc-options:    -main-is Client

  build-depends:
      -- internal
    , basics
  build-depends:
      -- inherited
    , grapesy
  build-depends:
      -- additional
    , random >= 1.2 && < 1.3
    , text   >= 1.2 && < 2.2

