cabal-version:      3.0
name:               metadata-tutorial
synopsis:           Metadata tutorial for grapesy
version:            0.1.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Edsko de Vries
maintainer:         edsko@well-typed.com
build-type:         Custom
extra-source-files: proto/fileserver.proto
tested-with:        GHC==8.10.7
                  , GHC==9.2.8
                  , GHC==9.4.8
                  , GHC==9.6.6
                  , GHC==9.8.2
                  , GHC==9.10.1

custom-setup
  setup-depends:
      base             >= 4.14 && < 5
    , Cabal            >= 3.0  && < 4
    , proto-lens-setup >= 0.4  && < 0.5

common lang
  build-depends:    base >= 4.14 && < 5
  default-language: Haskell2010
  ghc-options:      -Wall

  if impl(ghc >= 9.0)
    ghc-options:
      -Wunused-packages

  default-extensions:
      DataKinds
      DerivingStrategies
      FlexibleInstances
      GeneralizedNewtypeDeriving
      ImportQualifiedPost
      MultiParamTypeClasses
      NamedFieldPuns
      OverloadedLabels
      OverloadedStrings
      ScopedTypeVariables
      TypeApplications
      TypeFamilies
      UndecidableInstances

library
  import:             lang
  hs-source-dirs:     src
  build-tool-depends: proto-lens-protoc:proto-lens-protoc

  build-depends:
    , bytestring         >= 0.10 && < 0.13
    , exceptions         >= 0.10 && < 0.11
    , grapesy            >= 1.0  && < 1.1
    , proto-lens         >= 0.7  && < 0.8
    , proto-lens-runtime >= 0.7  && < 0.8
    , time               >= 1.9  && < 1.15
  exposed-modules:
      Proto.API.Fileserver
  other-modules:
      Proto.Fileserver
  autogen-modules:
      Proto.Fileserver

executable fileserver_server
  import:         lang
  main-is:        Server.hs
  hs-source-dirs: app
  ghc-options:    -main-is Server
  build-depends:  metadata-tutorial

  build-depends:
      -- inherited
    , bytestring
    , cryptohash-sha256
    , grapesy
  build-depends:
      -- additional
    , cryptohash-sha256 >= 0.11 && < 0.12
    , directory         >= 1.3  && < 1.4
    , text              >= 1.2  && < 2.2

executable fileserver_client
  import:         lang
  main-is:        Client.hs
  other-modules:  ProgressT
  hs-source-dirs: app
  ghc-options:    -main-is Client
  build-depends:  metadata-tutorial

  build-depends:
      -- inherited
    , bytestring
    , cryptohash-sha256
    , exceptions
    , grapesy
  build-depends:
      -- additional
    , cryptohash-sha256 >= 0.11 && < 0.12
    , mtl               >= 2.2  && < 2.4
    , text              >= 1.2  && < 2.2
