cabal-version:      3.0
name:               quickstart-tutorial
synopsis:           Quickstart tutorial for grapesy
version:            0.1.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Edsko de Vries
maintainer:         edsko@well-typed.com
build-type:         Custom
extra-source-files: proto/helloworld.proto
tested-with:        GHC==8.10.7
                  , GHC==9.2.8
                  , GHC==9.4.8
                  , GHC==9.6.6
                  , GHC==9.8.2
                  , GHC==9.10.1

custom-setup
  setup-depends:
      base             >= 4.14 && < 5
    , Cabal            >= 3.0  && < 4
    , proto-lens-setup >= 0.4  && < 0.5

common lang
  build-depends:    base >= 4.14 && < 5
  default-language: Haskell2010
  ghc-options:      -Wall

  if impl(ghc >= 9.0)
    ghc-options:
      -Wunused-packages

  default-extensions:
      DataKinds
      OverloadedLabels
      OverloadedStrings
      TypeApplications
      TypeFamilies

library
  import:             lang
  hs-source-dirs:     src
  build-tool-depends: proto-lens-protoc:proto-lens-protoc

  build-depends:
    , grapesy            >= 0.1 && < 0.2
    , proto-lens-runtime >= 0.7 && < 0.8
  exposed-modules:
      Proto.API.Helloworld
  other-modules:
      Proto.Helloworld
  autogen-modules:
      Proto.Helloworld

executable greeter_server
  import:         lang
  main-is:        Server.hs
  hs-source-dirs: app
  ghc-options:    -main-is Server
  build-depends:  quickstart-tutorial

  build-depends:
      -- inherited
    , grapesy

executable greeter_client
  import:         lang
  main-is:        Client.hs
  hs-source-dirs: app
  ghc-options:    -main-is Client
  build-depends:  quickstart-tutorial

  build-depends:
      -- inherited
    , grapesy
